<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_song1"
        android:title="@string/item_song1" />
    <item
        android:id="@+id/item_song2"
        android:title="@string/item_song2" />

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_me"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/item_backToSongBook"
        android:icon="@drawable/ic_baseline_sync_24"
        android:title=""
        app:showAsAction="always"
        />

</menu>